--- a/test/Install-to-device.yml
+++ b/test/Install-to-device.yml
@@ -11,7 +11,7 @@
       - name: Copy and install a policy package to devices.
         fmgr_securityconsole_install_package:
             securityconsole_install_package:
-                adom: SD-WAN-Lab
+                adom: sd-wan-lab-fos70
                 flags:
                   - none
                 pkg: "{{packageName}}"
